fix #60 just use getDeclaredConstructor()